<resources>
    <string name="app_name">HomeworkSixteen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>